--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/developmentOneZero/fileteste#readme",
   "dependencies": {
+    "dotenv": "^16.1.3",
     "koa": "^2.13.0",
     "koa-router": "^9.4.0"
   },
