--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "dotenv": "^16.1.3",
     "koa": "^2.13.0",
+    "koa-body": "^6.0.1",
     "koa-router": "^9.4.0",
     "zod": "^3.21.4"
   },
