--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "koa": "^2.13.0",
     "koa-body": "^6.0.1",
     "koa-router": "^9.4.0",
+    "uuid": "^9.0.0",
     "zod": "^3.21.4"
   },
   "devDependencies": {
